--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "googleapis": "^144.0.0",
-    "iron-session": "6.3.1",
+    "iron-session": "^6.3.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "13.5.6",
