--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.8.1",
